--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Components\Core\Component.cpp" />
+    <ClCompile Include="Source\Game\GameObjects\Core\GameObject.cpp" />
     <ClCompile Include="Source\Core\Application\Application.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Core\Time\Time.cpp" />
@@ -140,6 +142,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Components\Core\Component.h" />
+    <ClInclude Include="Source\Game\GameObjects\Core\GameObject.h" />
     <ClInclude Include="Source\Core\Application\Application.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Source\Core\Time\Time.h" />
