SceneContext WIP + Adjustments to Renderer
Scene is passed along to renderer via renderframe function, this way renderer doesn't rely on the static class.

--- a/AGP Assessment Project.vcxproj.filters
+++ b/AGP Assessment Project.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Source\Core\Renderer\Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Scene\Core\SceneContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Core\Renderer\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Scene\Core\SceneContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
