--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -131,6 +131,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Game\GameObjects\Default\Cube.cpp" />
+    <ClCompile Include="Source\Core\Renderer\Skybox.cpp" />
+    <ClCompile Include="Source\Components\Mesh\Mesh.cpp" />
     <ClCompile Include="Source\Assets\AssetHandler.cpp" />
     <ClCompile Include="Source\Assets\Model\Model.cpp" />
     <ClCompile Include="Source\Core\Input\InputHandler.cpp" />
@@ -149,11 +152,15 @@
     <ClCompile Include="Source\Core\Time\Time.cpp" />
     <ClCompile Include="Source\Core\Application\Window.cpp" />
     <ClCompile Include="Source\Components\Transform\Transform.cpp" />
+    <ClCompile Include="Source\Game\GameObjects\Default\Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Game\GameObjects\Default\Cube.h" />
+    <ClInclude Include="Source\Core\Renderer\Skybox.h" />
+    <ClInclude Include="Source\Components\Mesh\Mesh.h" />
     <ClInclude Include="Source\Assets\AssetHandler.h" />
     <ClInclude Include="Source\Assets\Model\Model.h" />
     <ClInclude Include="Source\Core\Input\InputHandler.h" />
@@ -176,6 +183,7 @@
     <ClInclude Include="Source\Debug\MemoryLeakDetector.h" />
     <ClInclude Include="Source\Components\Transform\Transform.h" />
     <ClInclude Include="Source\Assets\ReadData.h" />
+    <ClInclude Include="Source\Game\GameObjects\Default\Sphere.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
