Emitter + Particle Both WIP (Not Done Yet)

--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Components\Emitter\Emitter.cpp" />
+    <ClCompile Include="Source\Game\GameObjects\Default\Particle.cpp" />
     <ClCompile Include="Source\Game\GameObjects\Default\Cube.cpp" />
     <ClCompile Include="Source\Core\Renderer\Skybox.cpp" />
     <ClCompile Include="Source\Components\Mesh\Mesh.cpp" />
@@ -159,6 +161,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Components\Emitter\Emitter.h" />
+    <ClInclude Include="Source\Game\GameObjects\Default\Particle.h" />
     <ClInclude Include="Source\Game\GameObjects\Default\Cube.h" />
     <ClInclude Include="Source\Core\Renderer\Skybox.h" />
     <ClInclude Include="Source\Components\Mesh\Mesh.h" />
